detect bugs using FindBugs for NetBeans and fix them